// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DestinationTypePage.nextPage off the farm DestinationTypePage.content should render expected response and content 1`] = `
"
    <form method="POST" novalidate="">
      <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
          <input type="hidden" name="crumb" value="csrf-value">
          <input type="hidden" name="nextPage" value="">

<div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
      <h1 class="govuk-fieldset__heading">
        Where are the animals going to?
      </h1>
    </legend>
    <div class="govuk-radios" data-module="govuk-radios">
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="destinationType" name="destinationType" type="radio" value="tb-restricted-farm">
        <label class="govuk-label govuk-radios__label" for="destinationType">
          TB restricted farm
        </label>
      </div>
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="slaughter" name="destinationType" type="radio" value="slaughter">
        <label class="govuk-label govuk-radios__label" for="slaughter">
          Slaughter
        </label>
      </div>
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="dedicated-sale" name="destinationType" type="radio" value="dedicated-sale">
        <label class="govuk-label govuk-radios__label" for="dedicated-sale">
          Dedicated sale for TB (orange market)
        </label>
      </div>
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="afu" name="destinationType" type="radio" value="afu" aria-describedby="afu-item-hint">
        <label class="govuk-label govuk-radios__label" for="afu">
          Approved finishing unit (AFU)
        </label>
        <div id="afu-item-hint" class="govuk-hint govuk-radios__hint">
          Including enhanced with grazing (AFUE)
        </div>
      </div>
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="zoo" name="destinationType" type="radio" value="zoo">
        <label class="govuk-label govuk-radios__label" for="zoo">
          Zoo with TB restrictions
        </label>
      </div>
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="lab" name="destinationType" type="radio" value="lab">
        <label class="govuk-label govuk-radios__label" for="lab">
          Laboratory with TB restrictions
        </label>
      </div>
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="isoUnit" name="destinationType" type="radio" value="isoUnit">
        <label class="govuk-label govuk-radios__label" for="isoUnit">
          TB isolation unit
        </label>
      </div>
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="other" name="destinationType" type="radio" value="other">
        <label class="govuk-label govuk-radios__label" for="other">
          Another destination with TB restrictions
        </label>
      </div>
    </div>
  </fieldset>
</div>

            <button type="submit" class="govuk-button" data-module="govuk-button" id="continue-button">
  Continue
</button>
        </div>
      </div>
    </form>
        "
`;

exports[`DestinationTypePage.nextPage on the farm DestinationTypePage.content should render expected response and content 1`] = `
"
    <form method="POST" novalidate="">
      <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
          <input type="hidden" name="crumb" value="csrf-value">
          <input type="hidden" name="nextPage" value="">

<div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
      <h1 class="govuk-fieldset__heading">
        Where are the animals going to?
      </h1>
    </legend>
    <div class="govuk-radios" data-module="govuk-radios">
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="destinationType" name="destinationType" type="radio" value="tb-restricted-farm">
        <label class="govuk-label govuk-radios__label" for="destinationType">
          TB restricted farm
        </label>
      </div>
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="afu" name="destinationType" type="radio" value="afu" aria-describedby="afu-item-hint">
        <label class="govuk-label govuk-radios__label" for="afu">
          Approved finishing unit (AFU)
        </label>
        <div id="afu-item-hint" class="govuk-hint govuk-radios__hint">
          Including enhanced with grazing (AFUE)
        </div>
      </div>
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="zoo" name="destinationType" type="radio" value="zoo">
        <label class="govuk-label govuk-radios__label" for="zoo">
          Zoo with TB restrictions
        </label>
      </div>
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="lab" name="destinationType" type="radio" value="lab">
        <label class="govuk-label govuk-radios__label" for="lab">
          Laboratory with TB restrictions
        </label>
      </div>
      <div class="govuk-radios__item">
        <input class="govuk-radios__input" id="other" name="destinationType" type="radio" value="other">
        <label class="govuk-label govuk-radios__label" for="other">
          Another destination with TB restrictions
        </label>
      </div>
    </div>
  </fieldset>
</div>

            <button type="submit" class="govuk-button" data-module="govuk-button" id="continue-button">
  Continue
</button>
        </div>
      </div>
    </form>
        "
`;
